test/spec_vectors/load64/fail/module_15.wat
(module (memory i64 1) (func $load8_s_i32 (i32.load8_s (i64.const 0))))